Fix Bug where several mods are selected when overlapping which makes it hard to seperate them